# reading_backlog

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
extension/: background.js  manifest.json
extension/popup/: popup.css  popup.html  popup.js
scripts/: com.reading-backlog.server.plist  start_server.py  verify.py
src/: __init__.py  config.py
src/cli/: __init__.py  commands.py
src/dashboard/templates/: index.html
src/models/: __init__.py  article.py
src/server/: __init__.py  app.py  routes.py
src/services/: __init__.py  llm.py  scraper.py  storage.py
